--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -70,7 +70,7 @@ jobs:
           CASCADES: ${{ parameters.CASCADES }}
 
       - script: ls /root/.nuget/dolittle-packages
-      - script: rm -rf /root/.nuget/dolittle-packages
+      - script: rm -rf /root/.nuget/dolittle-packages/*
       - script: ls /root/.nuget/dolittle-packages
 
   # - job: "Release"
