--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -1,24 +1,23 @@
 parameters:
   CASCADES: []
+  DIRECTORY: $(Agent.TempDirectory)
 
 steps:
   - script: echo Looking for cascades and creating steps for them if any
     displayName: Cascading Build initial log
   - ${{ each repo in parameters.CASCADES }}:
-    - script: echo ${{ repo }}
-      displayName: Log repo
     - bash: |
         DIR=$(echo ${{ repo }} | cut -d "/" -f 2)
         rm -rf $DIR
         git clone --recursive https://github.com/${{ repo }}.git
         echo "##vso[task.setvariable variable=Folder;isOutput=true]$DIR"
-      workingDirectory: $(Agent.BuildDirectory)
+      workingDirectory: ${{ parameters.CWD }}
       displayName: Clone cascading repo
       name: clone_repo
     
     - template: './build.yml'
       parameters:
-        CWD: '$(Agent.BuildDirectory)/$(clone_repo.Folder)'
+        CWD: '${{ parameters.CWD }}/$(clone_repo.Folder)'
         buildConfiguration: 'Release'
 
     - bash: |
@@ -64,10 +63,10 @@ steps:
         }
         main
       name: set_version
-      workingDirectory: '$(Agent.BuildDirectory)/$(clone_repo.Folder)'
+      workingDirectory: '${{ parameters.CWD }}/$(clone_repo.Folder)'
     
     - bash: dotnet pack --output /root/.nuget/dolittle-packages /p:PackageVersion=$(set_version.Version)
-      workingDirectory: '$(Agent.BuildDirectory)/$(clone_repo.Folder)'
+      workingDirectory: '${{ parameters.CWD }}/$(clone_repo.Folder)'
 
   # Use command to get cascades:
   # curl https://raw.githubusercontent.com/$REPO/master/azure-pipelines.yml | yq r - jobs[0].parameters.CASCADES | awk '/-\S*/ {print $2}'
