--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -11,13 +11,13 @@ steps:
         rm -rf $DIR
         git clone --recursive https://github.com/${{ repo }}.git
         echo "##vso[task.setvariable variable=Folder;isOutput=true]$DIR"
-      workingDirectory: ${{ parameters.CWD }}
+      workingDirectory: ${{ parameters.DIRECTORY }}
       displayName: Clone cascading repo
       name: clone_repo
     
     - template: './build.yml'
       parameters:
-        CWD: '${{ parameters.CWD }}/$(clone_repo.Folder)'
+        CWD: '${{ parameters.DIRECTORY }}/$(clone_repo.Folder)'
         buildConfiguration: 'Release'
 
     - bash: |
@@ -63,10 +63,10 @@ steps:
         }
         main
       name: set_version
-      workingDirectory: '${{ parameters.CWD }}/$(clone_repo.Folder)'
+      workingDirectory: '${{ parameters.DIRECTORY }}/$(clone_repo.Folder)'
     
     - bash: dotnet pack --output /root/.nuget/dolittle-packages /p:PackageVersion=$(set_version.Version)
-      workingDirectory: '${{ parameters.CWD }}/$(clone_repo.Folder)'
+      workingDirectory: '${{ parameters.DIRECTORY }}/$(clone_repo.Folder)'
 
   # Use command to get cascades:
   # curl https://raw.githubusercontent.com/$REPO/master/azure-pipelines.yml | yq r - jobs[0].parameters.CASCADES | awk '/-\S*/ {print $2}'
