--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -74,5 +74,5 @@ steps:
     - template: './cascading_build.yml'
       parameters:
         CASCADES:
-          - ${{ each cascade in get_cascades.CASCADES }}:
+          - ${{ each cascade in $(get_cascades.CASCADES) }}:
             - ${{ cascade }}
