--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -13,8 +13,8 @@ steps:
     }
     get_labels_from_not_merged_pull_request () {
         echo https://api.github.com/repos/$REPO/pulls\?state\=all
-        echo $COMMIT_SHA
-        local MERGED_PR_JSON=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | jq '.[] | select(.head.sha=="'$COMMIT_SHA'")')
+        echo $(System.PullRequest.SourceCommitId)
+        local MERGED_PR_JSON=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | jq '.[] | select(.head.sha=="'$(System.PullRequest.SourceCommitId)'")')
         echo $MERGED_PR_JSON
         local LABELS=$(echo $MERGED_PR_JSON | jq '.labels | .[] | .name' -r)
         echo "$LABELS"
