--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
 
       - task: DotNetCoreInstaller@0
         inputs:
-          version: "2.2.203"
+          version: "3.*"
 
       - template: "./build.yml"
         parameters:
@@ -37,7 +37,7 @@ jobs:
 
       - task: DotNetCoreInstaller@0
         inputs:
-          version: "3.0.100-preview8-013656"
+          version: "3.*"
 
       - template: "./cascading_build.yml"
         parameters:
