--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -60,7 +60,7 @@ steps:
         }
         main
       displayName: Setting version
-      workingDirectory: '${{ parameters.DIRECTORY }}/$(Folder))'
+      workingDirectory: '${{ parameters.DIRECTORY }}/$(Folder)'
     
     - bash: dotnet pack --output /root/.nuget/dolittle-packages /p:PackageVersion=$(Version)
       workingDirectory: '${{ parameters.DIRECTORY }}/$(Folder))'
