--- a/Source/DotNet/tag_cascades.yml
+++ b/Source/DotNet/tag_cascades.yml
@@ -1,6 +1,6 @@
 parameters:
   CASCADES: []
-  DIRECTORY: $(Agent.BuildDirectory)
+  DIRECTORY: $(Agent.TempDirectory)
 
 steps:
   - ${{ each repo in parameters.CASCADES }}:
