--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -106,6 +106,8 @@ steps:
             echoerr No label triggering new version
             echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
         fi
+        echo "New version = $(Version)"
+        echo "Pr has been merged : $(IsMerge)"
     }
     main
 
