--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -64,3 +64,4 @@ steps:
     
     - bash: dotnet pack --output /root/.nuget/dolittle-packages /p:PackageVersion=$(Version)
       workingDirectory: '${{ parameters.DIRECTORY }}/$(Folder)'
+      condition: ne(dependencies.DotNetCore_Build.outputs['set_version.Version'], 'empty')
