--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -62,6 +62,7 @@ steps:
       displayName: Setting version
       workingDirectory: '${{ parameters.DIRECTORY }}/$(Folder)'
     
-    - bash: dotnet pack --output /root/.nuget/dolittle-packages /p:PackageVersion=$(Version)
+    - bash: |
+        dotnet pack --output /root/.nuget/dolittle-packages /p:PackageVersion=$(Version)
       workingDirectory: '${{ parameters.DIRECTORY }}/$(Folder)'
       condition: ne(dependencies.DotNetCore_Build.outputs['set_version.Version'], 'empty')
