--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -103,6 +103,8 @@ steps:
             echoerr No label triggering new version
             echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
         fi
+        echo "New version = $(Version)"
+        echo "PullResuest has been merged = $(IsMerge)"
     }
     main
 
