--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -81,10 +81,8 @@ jobs:
     pool: ${{ parameters.pool }}
     condition: always()
     variables:
-      - name: NEW_VERSION
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
-      - name: IsMerge
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+      - NEW_VERSION: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+      - IsMerge: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
     steps:
       - bash: |
           echo "Version : $(NEW_VERSION)"
