--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -82,8 +82,12 @@ jobs:
     dependsOn: "DotNetCore_Build"
     condition: always()
     variables:
-      NEW_VERSION: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
-      IsMerge: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+      - group: global-var-pipelines
+      - name: NEW_VERSION
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+      - name: IsMerge
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+      
     steps:
       - bash: |
           echo "Version : $(NEW_VERSION)"
