--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -50,17 +50,20 @@ jobs:
   - job: "Release"
     pool: ${{ parameters.pool }}
     dependsOn: "Cascading_Build"
-    condition: and(succeeded(), eq(dependencies.DotNetCore_Build.outputs['set_version.IsMerge'], 'true'))
+    condition: succeeded()
     variables:
       - group: global-var-pipelines
       - name: NEW_VERSION
         value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+      - name: IsMerge
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
 
     steps:
       - template: ../Github/set_github_constants.yml
 
       - task: NuGetCommand@2
         displayName: Push Nuget packs
+        condition: and( ne(NEW_VERSION, 'empty'), eq(IsMerge, 'true') )
         inputs:
           command: push
           nugetFeedType: "external"
