--- a/Source/Github/set_github_constants.yml
+++ b/Source/Github/set_github_constants.yml
@@ -20,4 +20,5 @@ steps:
     main
 
   displayName: Setting Github constants
+  condition: and( ne(NEW_VERSION, 'empty'), eq(IsMerge, 'true') )
   name: github_constants
