--- a/Source/DotNet/tag_cascades.yml
+++ b/Source/DotNet/tag_cascades.yml
@@ -53,7 +53,7 @@ steps:
         }
         main
       displayName: Setting version
-      condition: eq(varibales[IsMerge], 'true')
+      condition: eq($(IsMerge), 'true')
       workingDirectory: '${{ parameters.DIRECTORY }}/$(Folder)'
 
     - template: '../Versioning/commit_version_tag.yml'
