--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -98,9 +98,9 @@ jobs:
     variables:
       - group: global-var-pipelines
       - name: NEW_VERSION
-        value: $[ dependencies.Cascading_Build.outputs['check_version.Version'] ]
+        value: ${ dependencies.Cascading_Build.outputs['check_version.Version'] }
       - name: IsMerge
-        value: $[ dependencies.Cascading_Build.outputs['check_version.IsMerge'] ]
+        value: ${ dependencies.Cascading_Build.outputs['check_version.IsMerge'] }
       
     steps:
       - bash: |
